# src/routes/movements.rs
@@ -1,11 +1,11 @@
 use crate::errors::AppError;
 use crate::models::movement::{
-    CreateMovement, CreateMovementScore, ManyMovementsResponse, MovementResponse,
+    CreateMovement, CreateMovementScore, ManyMovementsResponse, MovementResponse, UpdateMovement,
 };
 use crate::models::user::Claims;
 use crate::repositories::movement_repository::{MovementRepository, MovementScoreRepository};
 use crate::utils::AppState;
-use actix_web::{get, post, web, HttpResponse, Responder};
+use actix_web::{get, patch, post, web, HttpResponse, Responder};
 use slog::{info, o};
 
 #[get("/")]
@@ -43,6 +43,30 @@ async fn create_movement(
         .await;
 
     result.map(|movement| HttpResponse::Created().json(movement))
+}
+
+#[patch("/{id}")]
+async fn update_movement(
+    state: web::Data<AppState>,
+    info: web::Path<String>,
+    claims: Claims,
+    movement: web::Json<UpdateMovement>,
+) -> Result<impl Responder, AppError> {
+    let movement_id = info.to_owned();
+    let logger = state
+        .logger
+        .new(o!("handler" => format!("PATCH /movements/{}", movement_id.to_owned())));
+    info!(logger, "Creating a new movement");
+    let movement_repo = MovementRepository {
+        mongo_client: state.mongo_client.clone(),
+    };
+
+    let user_id = claims.user_id.to_owned();
+    let result = movement_repo
+        .update_movement(user_id, movement_id, movement.into_inner())
+        .await;
+
+    result.map(|movement| HttpResponse::Ok().json(movement))
 }
 
 #[get("/{id}")]
@@ -107,6 +131,7 @@ async fn create_movement_score(
 pub fn init_routes(cfg: &mut web::ServiceConfig) {
     cfg.service(get_movements);
     cfg.service(create_movement);
+    cfg.service(update_movement);
     cfg.service(get_movement_by_id);
     cfg.service(create_movement_score);
 }
